--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,17 @@
 <p>profile works!</p>
+<div class="container bg-primary d-flex">
+  <!-- colonna centrale -->
+  <div class="row-">
+    <div class="col col-8 bg bg-primary"></div>
+    <div class="col col-8">ciao</div>
+    <div class="col col-8">ciao</div>
+    <div class="col col-8">ciao</div>
+  </div>
+  <!-- colonna di destra -->
+  <div class="row">
+    <div class="col col-4">ciao</div>
+    <div class="col col-4">ciao</div>
+    <div class="col col-4">ciao</div>
+    <div class="col col-4">ciao</div>
+  </div>
+</div>
