--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="container d-flex">
+  <div class="box">
+    <div class="w-100">
+      <img src="https://placekitten.com/500/100" alt="" class="w-100" />
+    </div>
+    <img src="https://placekitten.com/100/100" alt="" class="rounded-circle" />
+  </div>
+
+  <div class="side-box"></div>
+</div>
