--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<a routerLink="">Home</a> <br />
-<a routerLink="profile">Profile</a>
+<p>home works!</p>
+<div class="container d-flex">
+  <div class="box">
+    <div class="w-100">
+      <img src="https://placekitten.com/500/100" alt="" class="w-100" />
+    </div>
+    <img src="https://placekitten.com/100/100" alt="" class="rounded-circle" />
+  </div>
 
-<router-outlet></router-outlet>
+  <div class="side-box"></div>
+</div>
