--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,17 +1,74 @@
 <p>profile works!</p>
-<div class="container bg-primary d-flex">
-  <!-- colonna centrale -->
-  <div class="row-">
-    <div class="col col-8 bg bg-primary"></div>
-    <div class="col col-8">ciao</div>
-    <div class="col col-8">ciao</div>
-    <div class="col col-8">ciao</div>
-  </div>
-  <!-- colonna di destra -->
+<div class="container">
   <div class="row">
-    <div class="col col-4">ciao</div>
-    <div class="col col-4">ciao</div>
-    <div class="col col-4">ciao</div>
-    <div class="col col-4">ciao</div>
+    <!-- colonna centrale -->
+    <div class="col col-12 col-md-8 m-2">
+      <div class="row flex-column">
+        <div class="col g-4 bg-light">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam esse
+          ducimus qui harum maiores ratione accusamus cum totam, quasi fugit
+          maxime corporis, voluptatibus commodi id eos, sint aperiam molestiae
+          voluptas! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Magnam esse ducimus qui harum maiores ratione accusamus cum totam,
+          quasi fugit maxime corporis, voluptatibus commodi id eos, sint aperiam
+          molestiae voluptas! voluptas! Lorem ipsum dolor sit, amet consectetur
+          adipisicing elit. Magnam esse ducimus qui harum maiores ratione
+          accusamus cum totam, quasi fugit maxime corporis, voluptatibus commodi
+          id eos, sint aperiam molestiae voluptas!
+        </div>
+        <div class="col g-4 bg-light">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam esse
+          ducimus qui harum maiores ratione accusamus cum totam, quasi fugit
+          maxime corporis, voluptatibus commodi id eos, sint aperiam molestiae
+          voluptas! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Magnam esse ducimus qui harum maiores ratione accusamus cum totam,
+          quasi fugit maxime corporis, voluptatibus commodi id eos, sint aperiam
+          molestiae voluptas!
+        </div>
+        <div class="col g-4 bg-light">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam esse
+          ducimus qui harum maiores ratione accusamus cum totam, quasi fugit
+          maxime corporis, voluptatibus commodi id eos, sint aperiam molestiae
+          voluptas! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Magnam esse ducimus
+        </div>
+        <div class="col g-4 bg-light">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam esse
+          ducimus qui harum maiores ratione accusamus cum totam, quasi fugit
+          maxime corporis, voluptatibus commodi id eos, sint aperiam molestiae
+          voluptas!
+        </div>
+      </div>
+    </div>
+
+    <!-- colonna laterale -->
+    <div class="col col-12 col-md-3 m-2">
+      <div class="row flex-column">
+        <div class="col g-4 bg-light">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+          recusandae quia esse impedit ratione ad. Eligendi, quod modi suscipit
+          quaerat architecto amet praesentium cum voluptate nulla deleniti
+          tempora est voluptates!
+        </div>
+        <div class="col g-4 bg-light">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+          recusandae quia esse impedit ratione ad. Eligendi, quod modi suscipit
+          quaerat architecto amet praesentium cum voluptate nulla deleniti
+          tempora est voluptates!
+        </div>
+        <div class="col g-4 bg-light">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+          recusandae quia esse impedit ratione ad. Eligendi, quod modi suscipit
+          quaerat architecto amet praesentium cum voluptate nulla deleniti
+          tempora est voluptates!
+        </div>
+        <div class="col g-4 bg-light">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+          recusandae quia esse impedit ratione ad. Eligendi, quod modi suscipit
+          quaerat architecto amet praesentium cum voluptate nulla deleniti
+          tempora est voluptates!
+        </div>
+      </div>
+    </div>
   </div>
 </div>
