--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,21 @@
 <p>home works!</p>
 <div class="container d-flex">
   <div class="box">
-    <div class="w-100">
+    <div class="w-100 position-relative divImgProfile">
       <img src="https://placekitten.com/500/100" alt="" class="w-100" />
+
+      <img
+        src="https://placekitten.com/100/100"
+        alt=""
+        class="rounded-circle profileImg"
+      />
     </div>
-    <img src="https://placekitten.com/100/100" alt="" class="rounded-circle" />
+    <h1 class="mt-5">io</h1>
+    <h3>descrizione</h3>
+    <h3>FORMAZIONE</h3>
+    <h3 class="mb-0">residenza</h3>
+    <a href="modulobostrapp"> informazioni contatto</a>
+    <a href="link conoscenti"> n collegament*</a>
   </div>
 
   <div class="side-box"></div>
