--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,13 @@
 .box {
   width: 75%;
 }
+.profileImg {
+  position: absolute;
+  width: 21%;
+  border: 3px solid white;
+  top: 35px;
+  left: 24px;
+}
+.divImgProfile {
+  max-width: 800px !important;
+}
