--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,3 +16,29 @@
 .divImgProfile {
   max-width: 800px !important;
 }
+$colorBlue: rgba(10, 102, 194, 255);
+$colorgrey: grey;
+$amount: 45;
+
+.brBlue {
+  border: 1px solid $colorBlue;
+  color: $colorBlue;
+  &:hover {
+    background-color: lighten($colorBlue, $amount);
+  }
+}
+.brGrey {
+  border: 1px solid $colorgrey;
+  color: $colorgrey;
+  &:hover {
+    background-color: lighten($colorgrey, $amount);
+  }
+}
+.btBlue {
+  background-color: $colorBlue;
+  color: white;
+
+  &:hover {
+    background-color: darken($colorBlue, 10);
+  }
+}
