--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
     <h3 class="mb-0">residenza</h3>
     <a href="modulobostrapp"> informazioni contatto</a>
     <a href="link conoscenti"> n collegament*</a>
+    <button class="btn btBlue">a</button>
   </div>
 
   <div class="side-box"></div>
