--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -40,7 +40,7 @@
         </div>
       </div>
     </div>
-
+    <!-- blabalbads -->
     <!-- colonna laterale -->
     <div class="col col-12 col-md-3 m-2">
       <div class="row flex-column">
