--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,11 @@
     <h3 class="mb-0">residenza</h3>
     <a href="modulobostrapp"> informazioni contatto</a>
     <a href="link conoscenti"> n collegament*</a>
-    <button class="btn btBlue">a</button>
+    <button class="btn btBlue me-2">disponibile</button>
+    <button class="btn brBlue">aggiungi sezione profilo</button>
+    <button class="btn brBlue">aggiungi sezione profilo</button>
   </div>
 
   <div class="side-box"></div>
 </div>
+<app-profile></app-profile>
