--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,6 +1,6 @@
 <p>profile works!</p>
 <div class="container">
-  <div class="row">
+  <div class="row justify-content-around">
     <!-- colonna centrale -->
     <div class="col col-12 col-md-8 m-2">
       <div class="row flex-column">
@@ -40,7 +40,7 @@
         </div>
       </div>
     </div>
-    <!-- blabalbads -->
+
     <!-- colonna laterale -->
     <div class="col col-12 col-md-3 m-2">
       <div class="row flex-column">
