--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <p>home works!</p>
+<router-outlet></router-outlet>
 <div class="container d-flex">
   <div class="box">
     <div class="w-100 position-relative divImgProfile">
