--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,10 @@
 <p>profile works!</p>
+{{ profileData?.name }}
+{{ profileData?.surname }}
+{{ profileData?.email }}
+{{ profileData?.bio }}
+{{ profileData?.title }}
+{{ profileData?.area }}
+{{ profileData?.username }}
+
+<img [src]="profileData?.image" height="200px" width="200px" />
