--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<a routerLink="">Home</a> <br />
+<!-- <a routerLink="">Home</a> <br />
 <a routerLink="profile">Profile</a>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+<app-navbar></app-navbar>
