--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-body-tertiary">
+<nav class="navbar justify-content-around navbar-expand-md bg-body-tertiary">
   <div class="container justify-content-between">
     <!-- Logo linkedin -->
     <div class="logo">
@@ -33,7 +33,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-around" id="navbarNav">
       <ul class="navbar-nav icons align-items-md-center justify-content-evenly">
         <!-- Home -->
         <li class="nav-item">
