--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -12,13 +12,13 @@
     <div class="col col-12 col-md-8 m-2">
       <div class="row flex-column">
         <div class="col g-4 bg-light">
-          <div class="w-100 position-relative divImgProfile">
+          <div class="w-100 position-relative div-img-profile">
             <img src="https://placekitten.com/500/100" alt="" class="w-100" />
             <!-- Propic -->
             <img
               [src]="profileData?.image"
               alt=""
-              class="rounded-circle profileImg"
+              class="rounded-circle profile-img"
             />
           </div>
           <h1 class="mt-5">io</h1>
@@ -27,9 +27,9 @@
           <h3 class="mb-0">residenza</h3>
           <a href="modulobostrapp"> informazioni contatto</a>
           <a href="link conoscenti"> n collegament*</a>
-          <button class="btn btBlue me-2">disponibile</button>
-          <button class="btn brBlue">aggiungi sezione profilo</button>
-          <button class="btn brBlue">aggiungi sezione profilo</button>
+          <button class="btn btn-blue me-2">disponibile</button>
+          <button class="btn btn-blue">aggiungi sezione profilo</button>
+          <button class="btn btn-blue">aggiungi sezione profilo</button>
         </div>
         <div class="col g-4 bg-light">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam esse
