--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -11,9 +11,13 @@
     <!-- colonna centrale -->
     <div class="col col-12 col-md-8 m-2">
       <div class="row flex-column">
-        <div class="col g-4 bg-light">
-          <div class="w-100 position-relative div-img-profile">
-            <img src="https://placekitten.com/500/100" alt="" class="w-100" />
+        <div class="col g-4 linkedin-box p-0">
+          <div class="position-relative div-img-profile">
+            <img
+              src="./../assets/imgs/profile-top-image.png"
+              alt=""
+              class="img-fluid w-100 propic"
+            />
             <!-- Propic -->
             <img
               [src]="profileData?.image"
