--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -21,15 +21,17 @@
               class="rounded-circle profile-img"
             />
           </div>
-          <h1 class="mt-5">io</h1>
-          <h3>descrizione</h3>
-          <h3>FORMAZIONE</h3>
-          <h3 class="mb-0">residenza</h3>
+          <h1 class="mt-5">
+            {{ profileData?.name }} {{ profileData?.surname }}
+          </h1>
+          <h3>{{ profileData?.bio }}</h3>
+          <h3>{{ profileData?.title }}</h3>
+          <h3 class="mb-0">{{ profileData?.area }}</h3>
           <a href="modulobostrapp"> informazioni contatto</a>
           <a href="link conoscenti"> n collegament*</a>
-          <button class="btn btn-blue me-2">disponibile</button>
-          <button class="btn btn-blue">aggiungi sezione profilo</button>
-          <button class="btn btn-blue">aggiungi sezione profilo</button>
+          <button class="btn btn-blue me-2">Disponibile per</button>
+          <button class="btn btn-blue">Aggiungi sezione profilo</button>
+          <button class="btn btn-blue">...</button>
         </div>
         <div class="col g-4 bg-light">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam esse
