--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -12,7 +12,9 @@
     <div class="col col-12 col-md-8 m-2">
       <div class="row flex-column">
         <div class="col g-4 linkedin-box p-0">
-          <div class="position-relative div-img-profile">
+          <!-- Immagini -->
+          <div class="position-relative div-img-profile w-100 m-0 p-0">
+            <!-- Copertina -->
             <img
               src="./../assets/imgs/profile-top-image.png"
               alt=""
@@ -25,15 +27,17 @@
               class="rounded-circle profile-img"
             />
           </div>
-          <h1 class="mt-5">io</h1>
-          <h3>descrizione</h3>
-          <h3>FORMAZIONE</h3>
-          <h3 class="mb-0">residenza</h3>
-          <a href="modulobostrapp"> informazioni contatto</a>
-          <a href="link conoscenti"> n collegament*</a>
-          <button class="btn btn-blue me-2">disponibile</button>
-          <button class="btn btn-blue">aggiungi sezione profilo</button>
-          <button class="btn btn-blue">aggiungi sezione profilo</button>
+
+          <!-- Contenuto -->
+          <div class="linkedin-box-content">
+            <h1 class="mt-5">io</h1>
+            <h3>descrizione</h3>
+            <h3>FORMAZIONE</h3>
+            <h3 class="mb-0">residenza</h3>
+            <button class="btn btn-blue-2 me-2">disponibile per</button>
+            <button class="btn btn-blue">aggiungi sezione profilo</button>
+            <button class="btn btn-blue">aggiungi sezione profilo</button>
+          </div>
         </div>
         <div class="col g-4 bg-light">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam esse
