--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,54 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,400;8..60,500;8..60,700&display=swap');
 
+$linkedinBlue: #1666C5;
+$linkedinBlue2: #0a66c2;
+$lighten: 45;
+$darken: 15;
+
 body
 {
   background-color: #f3f2f0 !important;
   font-family:  Helvetica, Arial !important;
+}
+
+.linkedin-box
+{
+  background-color: #ffffff;
+  border-radius: 14px;
+  border: 1px solid lightgray
+}
+
+.linkedin-box-content
+{
+  padding: 20px;
+}
+
+.btn-blue
+{
+  border: 1.5px solid $linkedinBlue !important;
+  border-radius: 20px !important;
+  color: $linkedinBlue !important;
+  font-weight:700 !important;
+  padding: 6px 15px !important;
+
+  &:hover
+  {
+    background-color: lighten($linkedinBlue, $lighten) !important;
+  }
+}
+
+.btn-blue-2
+{
+  border: 1.5px solid  !important;
+  background-color: $linkedinBlue2 !important;
+  border-radius: 20px !important;
+  color: #f3f2f0 !important;
+  font-weight:700 !important;
+  padding: 6px 15px !important;
+
+  &:hover
+  {
+    background-color: darken($linkedinBlue2, $darken) !important;
+  }
 }
