--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -53,6 +53,38 @@
               <button class="btn btn-gray">aggiungi sezione profilo</button>
             </div>
           </div>
+
+          <div class="linkedin-box-content">
+            <div class="row row-cols-2">
+              <!-- Box 1 -->
+              <div class="p-2">
+                <div
+                  class="linkedin-box linkedin-box-content-mini linkedin-box-content-mini-blue"
+                >
+                  <div class="linkedin-box-content-mini">
+                    <p>Disponibile a lavorare</p>
+                    <p class="text-truncate">
+                      Ruoli di FrontEnd Developer e Sviluppatore C#
+                    </p>
+                    <a href="">Mostra dettagli</a>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Box 2 -->
+              <div class="p-2">
+                <div class="linkedin-box linkedin-box-content-mini">
+                  <div class="linkedin-box-content-mini">
+                    <p>Disponibile a lavorare</p>
+                    <p class="text-truncate">
+                      Ruoli di FrontEnd Developer e Sviluppatore C#
+                    </p>
+                    <a href="">Mostra dettagli</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Box di test -->
