--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -95,7 +95,7 @@
     </div>
 
     <!-- colonna laterale -->
-    <div class="col col-12 col-md-3 mx-2">
+    <div class="col col-12 col-md-3 mx-2 d-none d-md-flex">
       <div class="row flex-column">
         <div class="col g-4 linkedin-box">
           <div class="linkedin-box-content">
