--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,38 +1,38 @@
 <div class="container">
   <div class="row justify-content-around">
     <div class="col col-md-2">
-      <p>Informazioni</p>
-      <p>Linee guida della community</p>
-      <p>Privacy e condizioni</p>
-      <p>Sales Solutions</p>
-      <p>Centro sicurezza</p>
+      <a href="">Informazioni</a>
+      <a href="">Linee guida della community</a>
+      <a href="">Privacy e condizioni</a>
+      <a href="">Sales Solutions</a>
+      <a href="">Centro sicurezza</a>
     </div>
     <div class="col col-md-2">
-      <p>Accessibilità</p>
-      <p>Carriera</p>
-      <p>
+      <a href="">Accessibilità</a>
+      <a href="">Carriera</a>
+      <a href="">
         Opzioni per gli annunci <br />
         pubblicitari
-      </p>
-      <p>Mobile</p>
+      </a>
+      <a href="">Mobile</a>
     </div>
     <div class="col col-md-2">
-      <p>Talent Solutions</p>
-      <p>Soluzioni di marketing</p>
-      <p>Pubblicità</p>
-      <p>Piccole imprese</p>
+      <a href="">Talent Solutions</a>
+      <a href="">Soluzioni di marketing</a>
+      <a href="">Pubblicità</a>
+      <a href="">Piccole imprese</a>
     </div>
     <div class="col col-md-2">
       <h5>Domande?</h5>
-      <p>Visita il nostro Centro assistenza.</p>
+      <a href="">Visita il nostro Centro assistenza.</a>
       <h5>Gestisci il tuo account e la tua privacy</h5>
-      <p>Vai alle impostazioni</p>
+      <a href="">Vai alle impostazioni</a>
       <h5>Trasparenza sui contenuti consigliati</h5>
-      <p>Scopri di più sui contenuti consigliati.</p>
+      <a href="">Scopri di più sui contenuti consigliati.</a>
     </div>
     <div class="col col-md-2">
-      <p>Seleziona lingua</p>
+      <a href="">Seleziona lingua</a>
     </div>
   </div>
 </div>
-<p>LinkedIn Corporation &copy; 2023</p>
+<a href="">LinkedIn Corporation &copy; 2023</a>
