--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -132,15 +132,15 @@
                       ></button>
                     </div>
                     <div class="modal-body d-flex">
-                      <div>
+                      <div class="d-flex">
                         <i class="bi bi-globe2"></i>
                         <p>
                           Aggiungi più di una lingua al tuo profilo, così sarà
                           più facile trovarti.
                         </p>
                       </div>
-                      <div>
-                        <i class="bi bi-eyeglasses"></i>
+                      <div class="d-flex">
+                        <i class="bi bi-eyeglasses me-1"></i>
                         <p>
                           Se disponibile, mostreremo il tuo profilo nella lingua
                           di chi lo visita. Se non c’è corrispondenza, verrà
