--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -102,12 +102,12 @@
             <div class="d-flex justify-content-between">
               <p>lingua del profilo</p>
               <button
-                type="button"
-                class="btn"
+                type="button "
+                class="btn-icon"
                 data-bs-toggle="modal"
                 data-bs-target="#exampleModal"
               >
-                <i class="bi bi-pencil ms-3"></i>
+                <i class="bi bi-pencil"></i>
               </button>
 
               <!-- Modal -->
@@ -169,7 +169,14 @@
           <div class="linkedin-box-content">
             <div class="d-flex justify-content-between">
               <p>Public profile & URl</p>
-              <a href="" class="unstyle"> <i class="bi bi-pencil ms-3"></i></a>
+              <button
+                type="button "
+                class="btn-icon"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+              >
+                <i class="bi bi-pencil"></i>
+              </button>
             </div>
             <p class="text">link non apribile</p>
           </div>
