--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,3 +61,18 @@ body {
     border: 2px solid !important;
   }
 }
+
+.btn-icon
+{
+  border-radius: 100% !important;
+  text-align: center;
+  border: 0px;
+  background-color: #ffffff !important;
+  width: 35px;
+  height: 35px;
+
+  &:hover {
+    background-color: darken(#ffffff, 10) !important;
+    cursor:pointer
+  }
+}
