--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -133,14 +133,14 @@
                     </div>
                     <div class="modal-body d-flex">
                       <div class="d-flex">
-                        <i class="bi bi-globe2"></i>
+                        <i class="bi bi-globe2 me-2"></i>
                         <p>
                           Aggiungi più di una lingua al tuo profilo, così sarà
                           più facile trovarti.
                         </p>
                       </div>
                       <div class="d-flex">
-                        <i class="bi bi-eyeglasses me-1"></i>
+                        <i class="bi bi-eyeglasses me-2"></i>
                         <p>
                           Se disponibile, mostreremo il tuo profilo nella lingua
                           di chi lo visita. Se non c’è corrispondenza, verrà
