--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -87,6 +87,39 @@
           </div>
         </div>
 
+        <!-- Box Esperienze lavorative -->
+        <div class="col g-4 linkedin-box p-0">
+          <div class="linkedin-box-content">
+            <!-- Prima riga -->
+            <div class="row row-cols-2 align-items-center">
+              <div><h5 class="d-inline">Esperienza</h5></div>
+              <div class="text-end">
+                <!-- Icona + -->
+                <button
+                  type="button "
+                  class="btn-icon"
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                >
+                  <i class="bi bi-plus-lg"></i>
+                </button>
+
+                <!-- Icona matita -->
+                <button
+                  type="button "
+                  class="btn-icon"
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                >
+                  <i class="bi bi-pencil"></i>
+                </button>
+              </div>
+            </div>
+            <!-- Inizio esperienze -->
+            <div></div>
+          </div>
+        </div>
+
         <!-- Box di test -->
         <div class="col g-4 linkedin-box p-0">
           <div class="col g-4 linkedin-box-content"></div>
