--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -95,7 +95,7 @@
     </div>
 
     <!-- colonna laterale -->
-    <div class="col col-12 col-md-3 mx-2 d-none d-md-flex">
+    <div class="col col-12 col-md-3 mx-2">
       <div class="row flex-column">
         <div class="col g-4 linkedin-box">
           <div class="linkedin-box-content profilelanguage">
@@ -148,17 +148,20 @@
                         </p>
                       </div>
                     </div>
-                    <div class="modal-footer">
-                      <button
-                        type="button"
-                        class="btn btn-secondary"
-                        data-bs-dismiss="modal"
-                      >
-                        Close
-                      </button>
-                      <button type="button" class="btn btn-primary">
-                        Save changes
-                      </button>
+                    <div class="modal-footer d-block">
+                      <p>lingue</p>
+                      <button class="btn btn-gray">italiano</button>
+                      <button class="btn btn-blue">+ aggiungi lingua</button>
+                      <div class="d-flex">
+                        <i class="bi bi-lightbulb i"></i>
+                        <p>
+                          Puoi avere un solo profilo per lingua. Quando cambi il
+                          profilo nella tua lingua principale, le sezioni vuote
+                          verranno compilate usando la tua precedente lingua
+                          principale. Scopri di più su come
+                          <a href="">creare profili in un’altra lingua.</a>
+                        </p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -184,10 +187,9 @@
         </div>
         <div class="col g-4 linkedin-box">
           <div class="linkedin-box-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
-            recusandae quia esse impedit ratione ad. Eligendi, quod modi
-            suscipit quaerat architecto amet praesentium cum voluptate nulla
-            deleniti tempora est voluptates!
+            <div class="linkedin-box-content profilelanguage">
+              altri profili cosultati
+            </div>
           </div>
         </div>
       </div>
