--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -48,6 +48,11 @@ $amount: 45;
 .profilelanguage {
   border-bottom: 1px solid lightgray;
 }
-#exampleModal {
-  width: 1000px;
+
+#exampleModal i {
+  font-size: 2.5em;
+}
+#exampleModal .i {
+  font-size: 1em;
+  margin-right: 10px;
 }
