--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -1,6 +1,11 @@
 $colorBlue: #1666c5;
 $amount: 45;
 
+.fs-profile
+{
+  font-size: 14px;
+}
+
 .cover-img {
   border-top-left-radius: 14px;
   border-top-right-radius: 14px;
