--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -91,7 +91,7 @@
         <div class="col g-4 linkedin-box p-0">
           <div class="linkedin-box-content">
             <!-- Prima riga -->
-            <div class="row row-cols-2 align-items-center">
+            <div class="row row-cols-2 align-items-center mb-3">
               <div><h5 class="d-inline">Esperienza</h5></div>
               <div class="text-end">
                 <!-- Icona + -->
@@ -116,7 +116,31 @@
               </div>
             </div>
             <!-- Inizio esperienze -->
-            <div></div>
+            <div>
+              <div class="row">
+                <!-- Immagine azienda -->
+                <div class="col-2 text-center">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Valve-logo.jpg/1024px-Valve-logo.jpg"
+                    height="60px"
+                    width="60px"
+                  />
+                </div>
+                <!-- Descrizione -->
+                <div class="col-10">
+                  <p class="fw-bold m-0">Ruolo nell'azienda</p>
+                  <p class="fs-profile m-0">Nome dell'azienda - durata</p>
+                  <p class="fs-profile m-0">
+                    mese anno - mese anno - durata complessiva
+                  </p>
+                  <p class="fs-profile m-0">luogo</p>
+                  <p class="fs-profile">
+                    <span class="fw-bold">Competenze:</span>CSS HTML Jquery
+                    Javascript SQL
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
