--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -56,3 +56,12 @@ $amount: 45;
   font-size: 1em;
   margin-right: 10px;
 }
+.bold {
+  font-weight: bold;
+}
+.iconProfile {
+  height: 60px;
+}
+.marginButtuonIcon {
+  margin-left: 63px;
+}
