--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -100,7 +100,7 @@
         <div class="col g-4 linkedin-box">
           <div class="linkedin-box-content profilelanguage">
             <div class="d-flex justify-content-between">
-              <p>lingua del profilo</p>
+              <p class="bold">lingua del profilo</p>
               <button
                 type="button"
                 class="btn"
@@ -187,8 +187,36 @@
         </div>
         <div class="col g-4 linkedin-box">
           <div class="linkedin-box-content">
-            <div class="linkedin-box-content profilelanguage">
-              altri profili cosultati
+            <p class="bold">Altri profili cosultati</p>
+            <div class="d-flex mt-2">
+              <img
+                src="http://placekitten.com/100/100"
+                class="rounded-circle iconProfile"
+              />
+              <div class="ms-2">
+                <p class="bold mb-0">nome e cognome</p>
+                <p class="mb-3">specilizazione</p>
+              </div>
+            </div>
+            <div class="profilelanguage d-flex">
+              <button class="mb-2 marginButtuonIcon d-block btn btn-gray">
+                <i class="bi bi-person-fill-add"></i> colegati
+              </button>
+            </div>
+            <div class="d-flex mt-2">
+              <img
+                src="http://placekitten.com/100/100"
+                class="rounded-circle iconProfile"
+              />
+              <div class="ms-2">
+                <p class="bold mb-0">nome e cognome</p>
+                <p class="mb-3">specilizazione</p>
+              </div>
+            </div>
+            <div class="profilelanguage d-flex">
+              <button class="mb-2 marginButtuonIcon d-block btn btn-gray">
+                <i class="bi bi-person-fill-add"></i> colegati
+              </button>
             </div>
           </div>
         </div>
